--- a/prep/bd/hab/v2020/corals_data_prep.Rmd
+++ b/prep/bd/hab/v2020/corals_data_prep.Rmd
@@ -15,6 +15,8 @@ editor_options:
   chunk_output_type: console
 ---
 
+# Summary
+This script uses benthic habitat mapping shapefiles to calculate the percent live coral cover across three regions of interest on the reef to estimate the condition of coral reef habitats. 
 
 # Setup
 
