--- a/prep/bd/hab/v2020/rainforest_data_prep.Rmd
+++ b/prep/bd/hab/v2020/rainforest_data_prep.Rmd
@@ -16,7 +16,15 @@ editor_options:
 ---
 
 # Summary
-This script uses vegetation communities on the island to determine the land area occupied by rainforest and to estimate the extent of the rainforest relative to what it could be if palm plantations on the islands were removed. 
+
+This script uses data from a 2019 study quantifying coconut palm extent on the Pacific Islands to estimate the extent of the rainforest relative to what it could be if palm plantations on the island were removed.   
+
+# Data 
+
+ - Burnett, M.W. et al. (2019). "Quantifying coconut palm extent on Pacific islands using spectral textural analysis of very high resolution imagery". *International Journal of Remote Sensing* 40(19): 7329-7355   
+  [Available here](https://www.tandfonline.com/doi/epub/10.1080/01431161.2019.1594440?needAccess=true). 
+  
+The data comes from Table A1 downloaded on July 8, 2020 from [here](https://www.tandfonline.com/doi/figure/10.1080/01431161.2019.1594440?scroll=top&needAccess=true).  
 
 
 # Setup
@@ -25,7 +33,7 @@ This script uses vegetation communities on the island to determine the land area
 knitr::opts_chunk$set(echo = FALSE)
 
 library(tidyverse)
-library(sf)
+library(janitor)
 
 # Source and set file paths
 source(here('src/R/common.R'))
@@ -36,104 +44,148 @@ dir_anx    <- file.path(dir_M, 'git-annex/foursite/palmyra')
 
 # Methods
 
-## Get Vegetation Community Maps
+## Get Vegetation Data
 
-Vegetation community maps were downloaded from the U.S. Geological Survey vegetation community mapping project for Palmyra Atoll, found [here](https://www.sciencebase.gov/catalog/item/5c66fc5be4b0fe48cb3aca49).    
+Vegetation data is grouped into the following categories: cocos, native forest, scaelvola, and non-vegetated. Non-vegetated land area is excluded from the total area. Using the data we can find the total land area ($km^2$) and using the percent coverage, find the total area occupied by each vegetation category.  
 
-Data was downloaded on July 2, 2020, and vegetation maps were completed in October 2016 and published in June 2019.  
+```{r vegetation-data, eval=F}
 
-For habitats we are interested in those dominated by coconut palms and all other forest areas. The following vegetation communities are grouped together and considered "cocos" because they have the same National Vegetation Classification id:  
+veg_data <- read_csv(file.path(dir_anx, "_raw_data/Burnett_data/T0004-10.1080_01431161.2019.1594440.csv")) %>% 
+  clean_names()
 
- - Cocos: Monocultural coconut (Cocos nucifera; greater than 90 percent) dominated forest/woodland    
- - Cocos/Heliotropium: Coconut forest/woodland with abundant *Heliotropium foertherianum* in the canopy and subcanopy         
- 
-The following communities are grouped together to form the other "forest" area:  
+# Remove the (a) from the first column in total_area_m2
+veg_data$total_area_m2 = gsub('a', "", veg_data$total_area_m2)
 
- - Heliotropium-Scaevola: Woodland/scrubland dominated by Heliotropium with lesser amounts of Scaevola; both species are native to Palmyra   
- - Hibiscus: Monoculture stands of Hibiscus shrubs (greater than 75 percent), *Hibiscus tiliaceus* is nonnative      
- - Lepturus: Herbaceous community dominated by Pacific Island thintail (*Lepturus repens*); native to Palmyra     
- - Lepturus-Fimbristylis: Mowed areas dominated by Pacific Island thintail (Lepturus repens) and/or Fimbristylis; both species are native to Palmyra   
- - Pandanus: Closed or open forests/woodlands with abundant Pandanus (native), often with Cocos codominant 
- - Pisonia: Forest with abundant *Pisonia grandis* (native), sometimes co-dominant with or subordinate to coconut       
- - Pisonia/Heliotropium: Forest/woodlands with abundant Pisonia, and an understory of Heliotropium; both species are native to Palmyra      
- - Scaevola-Heliotropium: Scrublands dominated by Scaevola with lesser amounts of Heloitropium; both species are native to Palmyra   
- - Terminalia: Woodlands dominated by Terminalia, generally with an open understory; *Terminalia catappa* is generally regarded as nonnative invasive  
+# Substitute , out of the total area column and convert to numeric
+veg_data$total_area_m2 = as.numeric(gsub('[,]', "", veg_data$total_area_m2))
 
-These community descriptions were taken from the associated [USGS metadata](https://www.sciencebase.gov/catalog/file/get/5c66fc5be4b0fe48cb3aca49?f=__disk__9f%2F2a%2F87%2F9f2a870f06866871d04667b3f6c906896e7ccead&transform=1&allowOpen=true#Entity%20and%20Attribute%20Information) and species were compared against a list of native vascular plant species for Palmyra, found [here](http://www.hawaii.edu/gk-12/palmyra/specieslist/nativeplants.htm). *Heliotropium foertherianum* is also known as *Tournefortia argentea*, which is native to Palmyra.      
+# Find the area of each vegetation type using the total area and the percent area
+pal_veg <- veg_data %>% 
+  mutate(total_area_km = total_area_m2 * 0.000001) %>% 
+  dplyr::filter(islet == "Palmyra") # use the overall Palmyra atoll data
 
-Three communities are filtered out because they are not dominated by trees or vegetation of any kind:  
+# Extract total area in km2
+total_area <- pal_veg$total_area_km
 
- - Bare ground   
- - Runway (airplane runway)    
- - Water (standing water on the islands)   
+# Extract the percent coverage by vegetation category 
+veg_cover <- data.frame(category = c("cocos", "native_forest", "scaevola", "non_veg"), 
+                        percent_cover = c(pal_veg$percent_cocos, pal_veg$percent_native_forest,
+                                              pal_veg$percent_scaevola, pal_veg$percent_non_veg),
+                        total_area_km = total_area) %>% 
+  mutate(percent_cover = percent_cover / 100)
 
-```{r get-vegetation-maps, eval=F}
-
-veg_map <- st_read(file.path(dir_anx, '_raw_data/USGS_data/Vegetation_Commmunities_Palmyra_Atoll_2016'),
-                   layer = "Vegetation_Commmunities_Palmyra_Atoll_2016")
-
-plot(veg_map)
-
-# Shows vegetation communities across all the islands in the atoll along with area in hectares
-# group by community and calculate the total area of each type of community
-
-community_areas <- veg_map %>% 
-  group_by(Community) %>% 
-  summarize(comm_area_ha = sum(Area_ha)) 
-
-plot(community_areas)
-
-# Interested in the amount domminated by palm vs the amount dominated by other tree species 
-# Find area in square kilometers
-veg_area <- community_areas %>% 
-  dplyr::filter(Community != "Bare ground" & Community != "Water" & Community != "Runway") %>% 
-  mutate(veg_comm = ifelse(Community == "Cocos" | Community == "Cocos/Heliotropium", "cocos", "rainforest")) %>% 
-  group_by(veg_comm) %>% 
-  summarize(area_ha = sum(comm_area_ha)) %>% 
-  mutate(area_km = area_ha * 0.01) %>% 
-  dplyr::select(-area_ha)
-
-## Make sure that the percent make up using these groupings makes sense with what we've been told about the island 
-total_area <- sum(veg_area$area_km)
-coco_area <- veg_area$area_km[1]
-forest_area <- veg_area$area_km[2]
-percent_coco <- coco_area / total_area # 41%
-percent_forest <- forest_area / total_area # 59%
+# Save to int folder
+write_csv(veg_cover, file.path(dir_goal, "int/veg_cover.csv"))
 
 ```
 
-## Calculate Status
+## Calculate Vegetation Area
 
-The status would be the area of rainforest currently present compared to the area of rainforest that would exist once 95% of the  historic area of coconut palm has been removed. 
+For this goal, we are concerned with calculating the area ($km^2$) of the rainforest and of coconut palm plantations
+
+```{r calculate-percent-cover, eval=F}
+
+veg_cover <- read_csv(file.path(dir_goal, "int/veg_cover.csv"))
+
+# Regroup vegetation categories and find the total area 
+veg_area <- veg_cover %>%
+  mutate(category = ifelse(category == "scaevola", "forest", category),
+         category = ifelse(category == "native_forest", "forest", category)) %>% # group the native forest and scaevola together as forest 
+  mutate(cover_area = percent_cover * total_area_km) %>% 
+  filter(category != "non_veg") %>% 
+  dplyr::select(-total_area_km, - percent_cover) %>% 
+  group_by(category) %>% 
+  summarize(cover_area = sum(cover_area))
+
+# Save to int folder
+write_csv(veg_area, file.path(dir_goal, "int/veg_area.csv"))
+```
+
+## Get Historic Data
+
+The historic percent coverage of palm and rainforest will be used as the reference point for the status score. Historic values are based on a 2001 satellite image evaluated in the U.S. Geological Survey 2011 Terrestrial Forest Management Plan for Palmyra Atoll. There is no downlaodable data, these numbers are pulled from the report to create the historic data frame.    
+
+Citation: Hathaway, S.A., McEachern K., & Fisher, R.N. (2011). "Terrestrial Forest Management Plan for Palmyra Atoll". U.S. Geological Survey Open-File Report 2011-1007.  
+  [Available here](https://permanent.fdlp.gov/gpo119875/ofr20111007.pdf)  
+  
+This report states that references to the size of the island vary, so a total land area value was used from 2000, which is the closest estimate of the area of the island when the 2001 satellite image was taken. The 2000 estimated land area was manually derived and cited in the 2019 study where the current status data was downloaded.  
+
+The report gives the following vegetation categories and percent coverage:  
+
+ - Cocos: 43%    
+ - Scaevola: 29.5%   
+ - Pisonia or native forest: 12%   
+ - Broadleaf forest (combined with native forest): 6.2%   
+ - Hau (combined with native forest): 0.5% 
+ 
+The remaining 8.8% of the land area will be assumed to be non-vegetated.   
+  
+```{r historic-percent-cover, eval=F}
+
+# Create a data frame from the values in the report 
+historic_cover <- data.frame(category = c("cocos", "native_forest", "scaevola", "non_veg"),
+                             percent_cover = c(0.43, 0.187, 0.295, 0.088),
+                             total_area_km = 2.46) %>% 
+  mutate(category = as.character(category))
+
+# Regroup vegetation categories and find the total area 
+hist_area <- historic_cover %>%
+  mutate(category = ifelse(category == "scaevola", "forest", category),
+         category = ifelse(category == "native_forest", "forest", category)) %>% # group the native forest and scaevola together as forest 
+  mutate(cover_area = percent_cover * total_area_km) %>% 
+  filter(category != "non_veg") %>% 
+  dplyr::select(-total_area_km, - percent_cover) %>% 
+  group_by(category) %>% 
+  summarize(cover_area = sum(cover_area))
+
+# Save to int folder
+write_csv(hist_area, file.path(dir_goal, "int/historic_area.csv"))
+```
+
+
+## Calculate Status 
+
+The rainforest habitat status is calculated based on the area of rainforest currently present compared to the area of rainforest that would exist once 95% of the  historic area of coconut palm has been removed. 
 
 $status = area_{current}~(km^2)~/~area_{potential}~(km^2)$   
 
 The current rainforest area ($area_{current}$) is based on the USGS mapping exercise from 2016 where forest is defined as the total area of the 9 vegetation communities listed above. 
 
-The potential rainforest area ($area_{potential}$) is based on a 2001 satellite image showing approximately 43% of the islands are dominated by coconut plantations and 57% of the islands are dominated by other vegetation communities as discussed in the [USGS Terrestrial Management Plan](https://pubs.usgs.gov/of/2011/1007/pdf/ofr20111007.pdf) The potential rainforest area is calculated as the land area added once 95% of the historic palm plantations are removed plus the original 57% of land area that was dominated by rainforests. We are assuming the total area of land occupied by vegetation communities on the islands is 1.89 $km^2$, this does not include areas of the island that are non-vegetated. 
+The potential rainforest area ($area_{potential}$) is based on a 2001 satellite image showing approximately 43% of the islands are dominated by coconut plantations and 53% of the islands are dominated by other vegetation communities as discussed in the [USGS Terrestrial Management Plan](https://pubs.usgs.gov/of/2011/1007/pdf/ofr20111007.pdf) The potential rainforest area is calculated as the land area added once 95% of the historic palm plantations are removed plus the original 53% of land area that was dominated by rainforests.  
 
 $area_{potential}~=~area_{added}~(km^2)~+~area_{original}~(km^2)$   
 
 And where   
 
-$area_{added}~=~0.95~*~(0.43~*~1.89~(km^2))$   
-$area_{original}~=~0.57~*~1.89~(km^2)$   
+$area_{added}~=~0.95~*~(0.43~*~2.46~(km^2))$   
+$area_{original}~=~0.53~*~2.46~(km^2)$   
 
 ```{r calculate-status, eval=F}
 
-# Find the area of land that would be added if 95% of historic coconut palms are removed
-coco_area_hist <- 0.43 * total_area
-area_added <- 0.95 * coco_area_hist
+hist_area <- read_csv(file.path(dir_goal, "int/historic_area.csv"))
+present_area <- read_csv(file.path(dir_goal, "int/veg_area.csv"))
 
-# Total of rainforest area after removing 95% of coconut palms
-potential_forest_area <- area_added + (0.57 * total_area) # originally rainforest was 53% of the total area
+# Find the area of land that would be added if 95% of historic coconut palms are removed
+coco_area_hist <- hist_area$cover_area[hist_area$category == "cocos"]
+area_added     <- 0.95 * coco_area_hist
+
+# Total potential rainforest area is historic rainforest area + area added by removing 95% of coconut palms 
+forest_area_hist      <- hist_area$cover_area[hist_area$category == "forest"]
+potential_forest_area <- area_added + forest_area_hist 
+
+# Define current forest area:
+current_forest_area   <- present_area$cover_area[present_area$category == "forest"]
 
 # Find status based on current forest area relative to potential forest area 
-forest_status <- forest_area / potential_forest_area
+forest_status <- current_forest_area / potential_forest_area
 
 # Create a final status data frame for export
 rainforest_status <- data.frame(region_id = 1,
                                 year = 2020,
                                 status = forest_status)
 ```
+
+
+## Save to Toolbox 
+
 
