--- a/prep/hs/cs/v2020/carbon_storage_data_prep.Rmd
+++ b/prep/hs/cs/v2020/carbon_storage_data_prep.Rmd
@@ -28,6 +28,7 @@ library(tidyverse)
 library(sf)
 library(rgdal)
 library(lwgeom)
+library(here)
 
 # Source and set file paths
 source(here('src/R/common.R'))
