Add habitat type to final data frames

--- a/prep/bd/hab/v2020/rainforest_data_prep.Rmd
+++ b/prep/bd/hab/v2020/rainforest_data_prep.Rmd
@@ -182,6 +182,7 @@ forest_status <- current_forest_area / potential_forest_area
 
 # Create a final status data frame for export
 rainforest_status <- data.frame(region_id = 1,
+                                habitat = "rainforest",
                                 year = 2020,
                                 status = forest_status)
 ```
