Add the habitat type to the trend layer

--- a/prep/bd/hab/v2020/rainforest_trend.Rmd
+++ b/prep/bd/hab/v2020/rainforest_trend.Rmd
@@ -270,6 +270,7 @@ trend <- slope * 5
 # Create the final trend data frame 
 rainforest_trend <- data.frame(
   region_id = 1, 
+  habitat = "rainforest",
   year = 2019,
   trend = trend
 )
