tried subsetted dataset found on NOAA website

--- a/prep/hs/cp/v2020/gage_coral_ref_explore.Rmd
+++ b/prep/hs/cp/v2020/gage_coral_ref_explore.Rmd
@@ -151,3 +151,44 @@ zonal_sums_km2 <- zonal_sums_df %>%
 
 
 ```
+
+```{r}
+## try the other dataset found on NOAA
+dir_PACIOOS <- file.path(file.path(dir_M, 'git-annex/foursite/palmyra/_raw_data/PACIOOS_data/pat_unepwcmc_all_coralreefs'))
+
+unep_corals <- sf::st_read(dsn = file.path(dir_PACIOOS), layer = "pat_unepwcmc_all_coralreefs") %>%
+  st_transform(crs = us_alb)
+
+plot(unep_corals[2])
+
+fasterize_unep_corals <- fasterize::fasterize(unep_corals, raster = pal_3nm_rast , 
+                                     field = NULL)
+
+plot(fasterize_unep_corals)
+
+
+zonal_sums <- raster::zonal(fasterize_unep_corals, 
+                                     pal_3nm_rast,
+                                     fun = "sum",
+                                     na.rm = TRUE) #sum all coral cells for each ohi zone
+
+
+zonal_sums_df <- data.frame(zonal_sums)
+
+my_raster_res <- res(fasterize_unep_corals)
+my_raster_res ## 100 100
+
+crs(fasterize_unep_corals) ## units in m 
+a <- area(fasterize_unep_corals, na.rm = TRUE)
+cell_size <- data.frame(area = a[!is.na(a)]) # each cell is 10000 m2? which means each cell is 0.01 km2  
+
+
+zonal_sums_km2 <- zonal_sums_df %>%
+  mutate(year = 2002, habitat = "coral",
+         km2 = (0.01*sum)) %>% #one cell is equal to 0.01 km2
+  dplyr::rename("rgn_id" = "zone") %>%
+  dplyr::select(-sum)
+
+## its the same data set... just a subset of the bigger one like we did above. 
+```
+
